Changed designs of some pages

--- a/app/src/main/res/layout/fragment_edit_user_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_user_profile.xml
@@ -37,8 +37,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="250dp"
         android:layout_marginBottom="400dp"
-        android:background="#000000"
-        android:backgroundTint="#000000"
         android:text="Name:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -52,7 +50,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="#000000"
         android:text="Email:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -65,7 +62,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="#000000"
         android:text="Phone:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -78,7 +74,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="#000000"
         android:text="Group:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -104,7 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
@@ -120,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
@@ -135,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
@@ -150,7 +145,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
