--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -26,8 +26,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="250dp"
         android:layout_marginBottom="400dp"
-        android:background="#000000"
-        android:backgroundTint="#000000"
         android:text="Name:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -41,7 +39,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="#000000"
         android:text="Email:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -54,7 +51,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="#000000"
         android:text="Phone:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -67,7 +63,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="#000000"
         android:text="Group:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -88,12 +83,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/profile_name_tv"
+        android:id="@+id/userlistrow_text_v1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
@@ -109,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
@@ -124,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
@@ -139,7 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
