--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <size
-        android:height="4dp"
-        android:width="4dp"/>
-    <solid android:color="#000"/>
+        android:height="3dp"
+        android:width="3dp"/>
+    <solid android:color="#E3E3E3"/>
 
 </shape>
