Some changes on login and register

--- a/app/src/main/res/layout/users_list_row.xml
+++ b/app/src/main/res/layout/users_list_row.xml
@@ -29,12 +29,12 @@
         android:background="@drawable/rounded_background"
         android:ems="10"
         android:fontFamily="sans-serif"
-        android:inputType="text"
         android:padding="10dp"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:inputType="textNoSuggestions"
         app:layout_constraintBottom_toTopOf="@+id/userlistrow_text_v2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/userlistrow_imagev"
@@ -51,6 +51,7 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:inputType="textNoSuggestions"
         app:layout_constraintBottom_toTopOf="@+id/userlistrow_text_v3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/userlistrow_imagev"
@@ -71,6 +72,7 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:inputType="textNoSuggestions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/userlistrow_imagev"
