--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/rounded_background"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="text|textPassword"
         android:text="Password"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
