--- a/app/src/main/res/layout/users_list_row.xml
+++ b/app/src/main/res/layout/users_list_row.xml
@@ -53,6 +53,7 @@
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
+        android:inputType="textNoSuggestions"
         app:layout_constraintBottom_toBottomOf="@+id/userlistrow_imagev"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/userlistrow_imagev"
@@ -68,6 +69,7 @@
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
+        android:inputType="textNoSuggestions"
         app:layout_constraintBottom_toBottomOf="@+id/userlistrow_imagev"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/userlistrow_text_v2"
@@ -94,6 +96,7 @@
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
+        android:inputType="textNoSuggestions"
         app:layout_constraintBottom_toBottomOf="@+id/userlistrow_imagev"
         app:layout_constraintEnd_toStartOf="@+id/userlistrow_text_v3"
         app:layout_constraintStart_toStartOf="parent"
