--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -9,12 +9,15 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profile_pic"
         android:layout_width="160dp"
         android:layout_height="140dp"
         android:layout_marginBottom="500dp"
         android:src="@drawable/avatar"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        app:shapeAppearanceOverlay="@style/roundimageview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +32,7 @@
         android:text="Name:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
+        android:inputType="textNoSuggestions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +46,7 @@
         android:text="Email:"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
+        android:inputType="textNoSuggestions"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
