--- a/app/src/main/res/layout/fragment_lession_details.xml
+++ b/app/src/main/res/layout/fragment_lession_details.xml
@@ -4,12 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/onezerobg"
-    tools:context=".LessionDetailsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".LessionDetailsFragment"/>
