--- a/app/src/main/res/layout/fragment_lessons.xml
+++ b/app/src/main/res/layout/fragment_lessons.xml
@@ -1,15 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/onezerobg"
     tools:context=".LessonsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageButton
+        android:id="@+id/lesson1_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="210dp"
+        android:layout_marginBottom="45dp"
+        android:background="#00FFFFFF"
+        android:src="@drawable/lesson1_icon"
+        app:layout_constraintBottom_toTopOf="@+id/lesson2_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/lesson2_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
+        android:src="@drawable/lesson2_icon"
+        app:layout_constraintBottom_toTopOf="@+id/lesson3_btn"
+        app:layout_constraintEnd_toEndOf="@+id/lesson1_btn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/lesson1_btn"
+        app:layout_constraintTop_toBottomOf="@+id/lesson1_btn" />
+
+    <ImageButton
+        android:id="@+id/lesson3_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:background="#00FFFFFF"
+        android:src="@drawable/lesson3_icon"
+        app:layout_constraintBottom_toTopOf="@+id/lesson4_btn"
+        app:layout_constraintEnd_toEndOf="@+id/lesson2_btn"
+        app:layout_constraintStart_toStartOf="@+id/lesson2_btn"
+        app:layout_constraintTop_toBottomOf="@+id/lesson2_btn" />
+
+    <ImageButton
+        android:id="@+id/lesson4_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:layout_marginBottom="178dp"
+        android:background="#00FFFFFF"
+        android:src="@drawable/lesson4_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/lesson3_btn"
+        app:layout_constraintStart_toStartOf="@+id/lesson3_btn"
+        app:layout_constraintTop_toBottomOf="@+id/lesson3_btn" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="159dp"
+        android:layout_marginBottom="10dp"
+        android:text='"Every small step counts. Keep going!"'
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lesson4_btn" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="500dp"
+        android:src="@drawable/onlylogo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
